# open-league-adventures

.github/workflows/: rust_server_ci.yml
apps/bot/src/: constants.ts  index.ts
apps/bot/src/messages/: escaper.ts  list.ts  start.ts
apps/bot/src/types/: commands.ts  supabase.ts
apps/server/: Cargo.toml  processed_stats.json  stats_table.json
apps/server/data/: classes.json  experience_table.json  generate_stats.py  processed_stats.json  stats_table.json
apps/server/database/: Cargo.toml  build.rs  new_schema.sql  schema.sql
apps/server/database/deprecated_queries/: character_queries.sql
apps/server/database/queries/: migrations.sql  reads.sql  writes.sql
apps/server/database/src/: accessor.rs  cornucopia.rs  lib.rs  live_db_wrapper.rs  main.rs  mock_accessor.rs  sqlx_db_wrapper.rs  trait_def.rs
apps/server/database/supabase_queries/: table_creation.supabase
apps/server/eternal_quest_sdk/: Cargo.toml
apps/server/eternal_quest_sdk/src/: lib.rs  types.rs
apps/server/fight_system/: Cargo.toml
apps/server/fight_system/src/: actions.rs  fight_v2.rs  lib.rs
apps/server/game_types/: Cargo.toml
apps/server/game_types/src/: lib.rs
apps/server/proto/: buf.work.yaml
apps/server/proto/fight/: buf.yaml
apps/server/proto/fight/v1/: fight.proto
apps/server/proto/fight/v2/: fight.proto
apps/server/protodefs/: Cargo.toml  build.rs
apps/server/protodefs/protos/: fight.proto
apps/server/protodefs/src/: lib.rs
apps/server/sample_client/: Cargo.toml
apps/server/sample_client/src/: main.rs
apps/server/standalone/: Cargo.toml
apps/server/standalone/src/: main.rs  utils.rs
apps/web/src/lib/: state.ts
apps/web/src/routes/: +layout.svelte  +layout.ts
apps/web/src/routes/(navigable)/: +layout.svelte  +layout.ts  +page.svelte
apps/web/static/: tonconnect-manifest.json
(+7 files in other folders)
