[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cornucopia = "0.9.0"
cornucopia_async = "0.6.0"
# cornucopia_sync = "0.4.0"
deadpool-postgres = "0.12.1"
dotenv = "0.15.0"
futures = "0.3.30"
game_types = { path = "../game_types"}
postgres = "0.19.7"
postgres-types = "0.2.6"
rusqlite = {version = "0.31.0", features = ["bundled"]}
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = "0.7.10"
tonic = "0.11.0"


[build-dependencies]
cornucopia = "0.9.0"
