[package]
name = "fight_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
game_types = {path="../game_types"}
protodefs = {path="../protodefs"}
eternal_quest_sdk = {path="../eternal_quest_sdk"}